--- a/src/life-settings-dialog/life-settings-dialog.html
+++ b/src/life-settings-dialog/life-settings-dialog.html
@@ -101,8 +101,8 @@
       ],
 
       _handleCellColorChanged: function(red, green, blue){
-        this.set('app.color', 'rgb(' + red + ', ' + green + ', ' + blue + ')');
-        this.set('app.colora', 'rgba(' + red + ', ' + green + ', ' + blue + ', 0.3)');
+        this.set('app.cellColor', 'rgb(' + red + ', ' + green + ', ' + blue + ')');
+        this.set('app.overlayColor', 'rgba(' + red + ', ' + green + ', ' + blue + ', 0.3)');
       },
       _handleBGColorChanged: function(red, green, blue){
         this.set('app.backgroundColor', 'rgb(' + red + ', ' + green + ', ' + blue + ')');
