--- a/src/life-behaviors/life-canvas-behavior.html
+++ b/src/life-behaviors/life-canvas-behavior.html
@@ -116,18 +116,26 @@
     },
 
     // interface
-    drawPattern: function(startX, startY, pattern){
-      this._gameManager.drawPattern(startX, startY, pattern, this.cellColor);
+    drawPattern: function(startX, startY, pattern, location){
+      let x = startX;
+      let y = startY;
+      if(location === 'center'){
+        x = Math.floor((this._canvasWidth / this.cellSize) / 2 - pattern.meta.x / 2);
+        y = Math.floor((this._canvasHeight / this.cellSize) / 2 - pattern.meta.y / 2);
+      }
+
+      this._gameManager.drawPattern(x, y, pattern.payload, this.cellColor);
       this._gameManager.draw(this.cellColor);
     },
     drawPatternAsOverlay: function(startX, startY, pattern){
-      this._gameManager.drawOverlay(startX, startY, pattern, this.overlayColor);
+      this._gameManager.drawOverlay(startX, startY, pattern.payload, this.overlayColor);
     },
     drawPreview: function() {
       return null;
     },
     clearCanvas: function(){
       this._gameManager.clearCanvas();
+      this._gameManager.refreshCanvas(this.backgroundColor);
     },
 
     mainLoop: function(){
