--- a/src/life-preview-canvas/life-preview-canvas.html
+++ b/src/life-preview-canvas/life-preview-canvas.html
@@ -134,7 +134,11 @@
         // var y = Math.floor((this._canvasHeight / this.cellSize) / 2 - patternHeight / 2);
         // // console.log("width: " + this.patternWidth + "; height: " + this.patternHeight + ";x: " + x + "; y: " + y);
         // this.drawPattern(x, y, pattern.payload);
-        this.drawPattern(-1, -1, pattern, 'center');
+        this.drawPattern(pattern,
+                          {
+                            location: 'center',
+                            coordinate: 'canvas',
+                          });
       },
 
       _mapAutoPlay: function(autoPlay) {
