--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -51,6 +51,7 @@
           <dropdown-wrapper>
             <paper-icon-button icon="settings" class="dropdown-trigger"></paper-icon-button>
             <div class="dropdown-content">
+              <paper-checkbox checked="{{editMode}}">Edit mode</paper-checkbox>
               <paper-checkbox checked="{{hoverToPlay}}">Hover to play</paper-checkbox>
             </div>
           </dropdown-wrapper>
@@ -82,6 +83,10 @@
 
   <style>
     :host {
+    }
+
+    :host[edit-mode] paper-toolbar {
+      --paper-toolbar-background: var(--accent-color);
     }
     #container {
       display: inline-block;
@@ -280,6 +285,13 @@
           type: Object,
           notify: true,
           value: {}
+        },
+
+        editMode: {
+          type: Boolean,
+          reflectToAttribute: true,
+          observer: 'updateStyles',
+          value: false,
         },
 
         hoverToPlay: {
