--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -62,6 +62,7 @@
                         width="200"
                         height="200"
                         mode="canvas"
+                        editable="[[editMode]]"
                         refresh-rate="30"
                         cell-size="4"
                         brush="[[selectedItem]]"
