--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -171,7 +171,7 @@
       </div>
 
 
-      <iron-ajax auto url="../../patterns.json" handle-as="json" on-response="handleResponse"></iron-ajax>
+      <iron-ajax auto url="../../patterns-lite.json" handle-as="json" on-response="handleResponse"></iron-ajax>
     </app-drawer-layout>
   </template>
 
