--- a/src/life-behaviors/life-pattern-catalog-behavior.html
+++ b/src/life-behaviors/life-pattern-catalog-behavior.html
@@ -58,13 +58,13 @@
       }
     },
 
-    next: function() {
+    goNext: function() {
       if(this.canGoNext) {
         this.currentPage += 1;
       }
     },
 
-    back: function() {
+    goBack: function() {
       if(this.canGoBack) {
         this.currentPage -= 1;
       }
